<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tomasz.Nosal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="equalssign">=</string>
    <string name="cancel">C</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="labelName">Name</string>
    <string name="Login">Login</string>
    <string name="OK">OK</string>

</resources>
